# conservatory

./: .gitignore  CMakeLists.txt
includes/: math_lib.h
includes/data_structures/: binary_tree.h
includes/searching/: binary_search.h
targets/: conservatory-binary-search.cpp
